# architekt-factory-platform

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.de.md  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.fr.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.ko.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt.md  CODE_OF_CONDUCT.zh-CN.md  CONTRIBUTING.de.md  CONTRIBUTING.es.md  CONTRIBUTING.fr.md  CONTRIBUTING.ja.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  CONTRIBUTING.pt.md  CONTRIBUTING.zh-CN.md  Dockerfile  LICENSE  Makefile  PR_UPDATE.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.zh-CN.md  SECURITY.de.md  SECURITY.es.md  SECURITY.fr.md  SECURITY.ja.md  SECURITY.ko.md  SECURITY.md  SECURITY.pt.md  (+7 more)
.github/: PROJECT.md  dependabot.yml  labels.yml
_FACTORY_CORE/: README.md
_MIGRATION_FACTORY/: README.md
cli/: _api.py  architekt.py  sf.py
dashboard/: README.md  server.py
deploy/: README.md  deploy-vps.sh.template  setup-dns.sh.template
docs/: ARCHITECTURES.md  AUDIT_REBRAND.md  CATALOG.md  CLIENTS.md  COMPLIANCE.md  GTM.md  I18N.md  INTAKE.md  METRICS.md  OFFERS.md  PROJECTS.md  RISKS.md  ROADMAP.md  SECURITY.md  STACK-MATRIX.md  UX-REGIONAL.md  conventions.md  schema.md  security.md  spec.md  workflows.md
hooks/: pre-push
mcp_lrm/: server_sse.py
platform/: CLAUDE.md  Dockerfile  README.md  SPECS.md  architekt-platform.service  branding.py  config.py  docker-compose.yml  interfaces.py  log_config.py  nginx.conf  requirements.txt  runtime.py  security.py  server.py  version.py
scripts/: monitor.sh  (+3 more)
(+354 files in other folders)
