[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "architekt-factory-platform"
version = "2.1.0"
description = "Architekt Factory — multi-agent platform for AI-accelerated software delivery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Macaron Software", email = "dev@macaron.software"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.8",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
pydantic = [
    "pydantic>=2.0",
]

[project.scripts]
factory = "cli.factory:main"

[project.urls]
Repository = "https://github.com/macaron-software/software-factory"

[tool.setuptools.packages.find]
include = ["core*", "mcp_lrm*", "cli*", "analyzers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["F", "E4", "E7", "E9"]
ignore = ["E402", "E741", "F401"]

[tool.ruff.lint.per-file-ignores]
"platform/patterns/engine.py" = ["E402", "F401"]
"tests/test_deterministic_tools.py" = ["E402"]

